--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <iframe
-    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/sixthkrum/sixthkrum.github.io/blob/126cc6d17e7f0d86838683e5f250f01141c538bb/resume.pdf#toolbar=0&scrollbar=0"
+    src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://raw.githubusercontent.com/sixthkrum/sixthkrum.github.io/master/resume.pdf#toolbar=0&scrollbar=0"
     frameBorder="0"
     scrolling="auto"
     height="100%"
