--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <iframe
     src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://raw.githubusercontent.com/sixthkrum/sixthkrum.github.io/master/resume.pdf#toolbar=0&scrollbar=0"
     frameBorder="0"
