--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,6 @@
     src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://raw.githubusercontent.com/sixthkrum/sixthkrum.github.io/master/resume.pdf#toolbar=0&scrollbar=0"
     frameBorder="0"
     scrolling="auto"
-    height="100%"
-    width="100vh"
+    height="100vh"
+    width="100%"
 ></iframe>
